Missing helper added and activation and deactivation hook updated

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
             "Alexandra\\": "src/"
         },
         "files": [
-            "constants.php"
+            "constants.php",
+            "Helpers/helper.php"
         ]
     },
     "authors": [
