--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "description": "```(A test plugin for learning wordpress plugin development)```",
   "main": "index.js",
   "scripts": {
-      "development": "mix",
-      "watch": "mix watch",
-      "watch-poll": "mix watch -- --watch-options-poll=1000",
-      "hot": "mix watch --hot",
-      "production": "mix --production"
+    "development": "mix",
+    "watch": "mix watch",
+    "watch-poll": "mix watch -- --watch-options-poll=1000",
+    "hot": "mix watch --hot",
+    "production": "mix --production"
   },
   "repository": {
     "type": "git",
@@ -27,5 +27,9 @@
     "resolve-url-loader": "^5.0.0",
     "sass": "^1.54.0",
     "sass-loader": "^12.6.0"
+  },
+  "dependencies": {
+    "devicon": "^2.15.1",
+    "devicons": "^1.8.0"
   }
 }
