--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,12 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "php": "^7.1"
+    },
+    "config": {
+        "platform": {
+            "php": "7.1"
+        }
+    }
 }
