--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,6 +1,3 @@
 {
-    "/assets/js/alexandra.js": "/assets/js/alexandra.js",
-    "/assets/css/author_bio.css": "/assets/css/author_bio.css",
-    "/assets/css/alexandra.css": "/assets/css/alexandra.css",
-    "/assets/css/style.css": "/assets/css/style.css"
+    "/assets/js/app.js": "/assets/js/app.js"
 }
