--- a/package.json
+++ b/package.json
@@ -30,6 +30,10 @@
   },
   "dependencies": {
     "devicon": "^2.15.1",
-    "devicons": "^1.8.0"
+    "devicons": "^1.8.0",
+    "element-plus": "^2.2.12",
+    "vue": "^3.2.37",
+    "vue-loader": "^17.0.0",
+    "vue-router": "^4.1.3"
   }
 }
