--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "devicon": "^2.15.1",
     "devicons": "^1.8.0",
     "element-plus": "^2.2.12",
+    "jQuery": "^1.7.4",
     "vue": "^3.2.37",
     "vue-loader": "^17.0.0",
-    "vue-router": "^4.1.3"
+    "vue-router": "^4.1.3",
+    "webpack": "^5.74.0"
   }
 }
