--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "devicon": "^2.15.1",
     "devicons": "^1.8.0",
     "element-plus": "^2.2.12",
+    "jquery": "^3.6.0",
     "jQuery": "^1.7.4",
     "vue": "^3.2.37",
     "vue-loader": "^17.0.0",
