--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,3 +1,4 @@
 {
-  "/assets/js/app.js": "/assets/js/app.js"
+    "/assets/js/app.js": "/assets/js/app.js",
+    "/assets/css/author_bio.css": "/assets/css/author_bio.css"
 }
