--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "sass-loader": "^12.6.0"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.2",
     "devicon": "^2.15.1",
     "devicons": "^1.8.0",
     "element-plus": "^2.2.12",
