--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/hasanmisbah/alexandra-wp#readme",
   "devDependencies": {
+    "@faker-js/faker": "^7.4.0",
     "cross-env": "^7.0.3",
     "eslint": "^8.21.0",
     "eslint-plugin-vue": "^9.3.0",
