--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "sass-loader": "^12.6.0"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.6",
     "@fortawesome/fontawesome-free": "^6.1.2",
     "devicon": "^2.15.1",
     "devicons": "^1.8.0",
