Short code view with real data done also fallback text added

--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -2,5 +2,6 @@
     "/assets/js/app.js": "/assets/js/app.js",
     "/assets/js/ajax-handler.js": "/assets/js/ajax-handler.js",
     "/assets/css/author_bio.css": "/assets/css/author_bio.css",
-    "/assets/css/alexandra.css": "/assets/css/alexandra.css"
+    "/assets/css/alexandra.css": "/assets/css/alexandra.css",
+    "/assets/css/contact_short_code.css": "/assets/css/contact_short_code.css"
 }
